Fixed spacing between boxes and NavBar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,7 +99,7 @@ margin-right: auto;
 .safety-info {
   color: white;
   padding: 50px;
-  margin: 40px;
+  margin: 0px 40px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -119,7 +119,7 @@ margin-right: auto;
 /* HISTORY INFO */
 .history-info {
   padding: 50px;
-  margin: 40px;
+  margin: 0px 40px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
